fixed issue with tree view horizontal scrolling. Added color indicators for selected node direct parents/children

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -22,7 +22,7 @@
 
 .content{
     position: absolute;
-    top: 132px;
+    top: 144px;
     left:0;
     right:0;
     margin: auto;
@@ -50,7 +50,7 @@
 .search-background{
     border: 1px solid #363636;
     height: 44px;
-    width: 234px;
+    width: 238px;
     background-color: #fafafa;
     position: absolute;
     right: 8px;
