--- a/src/app/components/shared/link-display/link-display.component.scss
+++ b/src/app/components/shared/link-display/link-display.component.scss
@@ -3,3 +3,8 @@
     stroke: #999;
     stroke-opacity: 0.5;
 }
+
+.type-text{
+    font-size: 9px;
+    fill: #08113e;
+}
