--- a/src/app/components/shared/node-display/node-display.component.scss
+++ b/src/app/components/shared/node-display/node-display.component.scss
@@ -10,10 +10,10 @@
 
 .node-name {
       font-family: 'Lato';
-      font-size: 16px;
+      font-size: 12px;
       text-anchor: middle;
       dominant-baseline: central; //doesn't work on firefox
       font-weight: 300;
-      fill: #1F2B65;
+      fill: #1f2b65;
       cursor: pointer;
 }   
